# dual-apps

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLI-REFERENCE.md  CONVENTION-v3.md  CUSTOMIZATION.md  DEPLOYMENT (1).md  DEPLOYMENT.md  DEVELOPMENT (1).md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md  SECURITY-GUIDE.md  comment créer un module python.md  pyproject.toml
docs/: architecture.md  cli-reference.md  contributing.md  index.md  installation.md  quickstart.md  security.md
src/dual_apps/: README.md  __init__.py  __main__.py
src/dual_apps/cli/: __init__.py  main.py
src/dual_apps/generators/: __init__.py  app_generator.py  base.py  project_generator.py
src/dual_apps/templates/app/: .env.example.j2  .gitignore.j2  .pre-commit-config.yaml.j2  __init__.py.j2  admin.py.j2  apps.py.j2  forms.py.j2  models.py.j2  permissions.py.j2  pyproject.toml.j2  pytest.ini.j2  serializers.py.j2  tasks.py.j2  urls.py.j2  views_api.py.j2  views_frontend.py.j2
src/dual_apps/templates/app/management/: __init__.py.j2
src/dual_apps/templates/app/migrations/: __init__.py.j2
src/dual_apps/templates/app/templates/: base.html.j2  confirm_delete.html.j2  detail.html.j2  form.html.j2  list.html.j2
src/dual_apps/templates/auth/: admin.py.j2  models.py.j2  oauth.py.j2  serializers.py.j2  tests.py.j2  urls.py.j2  views.py.j2
src/dual_apps/templates/auth/allauth/: adapters.py.j2  settings.py.j2  urls.py.j2
src/dual_apps/templates/core/: apps.py.j2
src/dual_apps/templates/core/security/: decorators.py.j2  middleware.py.j2  mixins.py.j2  throttling.py.j2  utils.py.j2  validators.py.j2
src/dual_apps/templates/docker/: Dockerfile.app.j2  Dockerfile.celery.j2  docker-compose.dev.yml.j2  docker-compose.prod.yml.j2  docker-compose.yml.j2  gunicorn.conf.py.j2  supervisord.conf.j2
src/dual_apps/templates/docker/nginx/: nginx.conf.j2
src/dual_apps/templates/docs/: API.md.j2  ARCHITECTURE.md.j2  ARCHITECTURE.project.md.j2  CHANGELOG.md.j2  CLI-REFERENCE.md.j2  CONTRIBUTING.md.j2  CONVENTION-v3.md.j2  COVERAGE.md.j2  CUSTOMIZATION.md.j2  DEPLOYMENT.md.j2  DEVELOPMENT.md.j2  LICENSE.j2  README.md.j2  README.project.md.j2  SECURITY-GUIDE.md.j2  SECURITY.md.j2  TODO.md.j2
src/dual_apps/templates/e2e/: package.json.j2  playwright.config.js.j2
src/dual_apps/templates/e2e/fixtures/: auth.js.j2  global-setup.js.j2  global-teardown.js.j2
src/dual_apps/templates/e2e/tests/: base.spec.js.j2
src/dual_apps/templates/frontend/html/: base.html.j2
src/dual_apps/templates/frontend/htmx/: base.html.j2
src/dual_apps/templates/frontend/react/: .gitignore.j2  index.html.j2  package.json.j2  vite.config.js.j2
src/dual_apps/templates/github/: cd.yml.j2  ci.yml.j2  coverage.yml.j2  release.yml.j2  security.yml.j2
src/dual_apps/templates/github/ISSUE_TEMPLATE/: bug.md.j2  feature.md.j2
src/dual_apps/templates/project/: .env.example.j2  .gitignore.j2  .pre-commit-config.yaml.j2  __init__.py.j2  api_docs.py.j2  asgi.py.j2  celery.py.j2  manage.py.j2  middleware.py.j2  pyproject.toml.j2  pytest.ini.j2  throttling.py.j2  urls.py.j2  wsgi.py.j2
src/dual_apps/templates/project/requirements/: base.in.j2  dev.in.j2  prod.in.j2
src/dual_apps/templates/scripts/: benchmark.sh.j2  deploy.sh.j2  security-audit.sh.j2  setup.sh.j2
src/dual_apps/templates/tests/: __init__.py.j2  conftest.py.j2  test_api.py.j2  test_frontend.py.j2  test_models.py.j2  test_permissions.py.j2
tests/: __init__.py  conftest.py  test_app_generator.py  test_app_generator_extended.py  test_base_extended.py  test_base_generator.py  test_cli.py  test_cli_extended.py  test_coverage_boost.py  test_main_module.py  test_project_generator.py  test_project_generator_extended.py
tests/integration/: test_frontend_generation.py
(+201 files in other folders)
